--- a/assets/scss/_gallery-pages.scss
+++ b/assets/scss/_gallery-pages.scss
@@ -29,8 +29,38 @@
                 width:100%;
                 height:auto;
                 &.horizontal {
-                    height:100%;
-                    width:auto;
+                    @media screen and (min-width:1200px) {
+                        height:273px;
+                        width:auto;
+                    }
+                    @media screen and (min-width:992px) and (max-width:1199px) {
+                        height:228px;
+                        width:auto;
+                    }
+                    @media screen and (min-width:768px) and (max-width:991px) {
+                        height:224px;
+                        width:auto;
+                    }
+                    @media screen and (min-width:576px) and (max-width:767px) {
+                        height:246px;
+                        width:auto;
+                    }
+                    @media screen and (min-width:450px) and (max-width:575px) {
+                        height:200px;
+                        width:auto;
+                    }
+                    @media screen and (min-width:401px) and (max-width:449px) {
+                        height:180px;
+                        width:auto;
+                    }
+                    @media screen and (min-width:375px) and (max-width:400px) {
+                        height:163px;
+                        width:auto;
+                    }
+                    @media screen and (max-width:374px) {
+                        height:136px;
+                        width:auto;
+                    }
                 }
                 &:hover {
                     cursor:pointer;
